TGC-1078: Add endpoint to get all live form slugs
